--- a/style.css
+++ b/style.css
@@ -10,11 +10,10 @@
     padding: 0 15px;
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
+    justify-content:space-between;
     align-items: center;
   }
-  .wrapper {
+.wrapper {
     width: 100%;
     height: 100%;
     display: flex;
@@ -31,10 +30,17 @@ header {
     padding-top: 56px;
     font-family: "Mulish", sans-serif;
 }
+p {
+    font-family: "Mulish", sans-serif;
+    font-size: 18px;
+}
 .header_ul {
     display:flex;
     list-style: none;
     column-gap: 50px;
+}
+.hero_col-left{
+    width: 50%;
 }
 
 a {
@@ -57,9 +63,90 @@ a {
     font-weight: 700;
 }
 .primary-btn {
+    position:relative;
+    top: -8px;
+    left: -8px;
+    display: block;
     color:white;
     background-color:black;
-    font-size:20px;
+    font-size:18px;
     padding: 17px 48px;
-    border-color: red ;
+    text-decoration: none;
+    font-family: "Nunito sans", sans-serif;
+    font-weight: 700;
+    transition: 0.3s;
   }
+  .primary-btn:hover{
+    top: 0;
+    left: 0;
+
+  }
+  .primary-btn:focus {
+
+  }
+  .primary-btn:active { 
+    background-color: white;
+    color: #000;
+
+  }
+  .btn-wrapper {
+    height: fit-content;
+    width: fit-content;
+    border: solid #000 3px;
+  }
+  h1,
+  h2 {
+    font-family: "Abril Fateface", serif;
+    font-size: 56px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    color: var(--Text-Color, #000);
+text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  
+  }
+  .p1 {
+    margin: 31px 0 64px 0;
+  }
+  .p2 {
+    margin: 10px 0 24px 0;
+  }
+  .wrapper_2 {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content:space-between;
+    align-items: flex-start;
+
+  }
+  .latest {
+    font-weight: 700;
+    font-size: 14px;
+    font-family: "Mulish", sans-serif;
+    font-style: normal;
+    letter-spacing: 2.8px;
+    text-transform: uppercase;
+    color: #B7B4B9;
+  }
+  .p3 {
+    margin: 32px 0 64px 0;
+  }
+  .img {
+    width: 523px;
+  }
+  .div__left-buttons {
+    display:flex;
+    column-gap:20px;
+    margin-top: 20px;
+    font-size: 13px;
+    font-weight: 700;
+& button{
+    padding:6px 10px;
+    border-radius:1px;
+    background-color: #A8B4FF;;
+}
+}
+.margin_1 {
+  margin: 65px 0 209px 0;
+  
+}
