--- a/style.css
+++ b/style.css
@@ -146,7 +146,69 @@ text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background-color: #A8B4FF;;
 }
 }
-.margin_1 {
-  margin: 65px 0 209px 0;
-  
+#shaded_text {
+  position: relative;
+}
+#shaded_text::after {
+  content: "";
+  height: 65%;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  background-color: #A8B4FF;
+  z-index: -1;
+
+}
+#shaded_text_2 {
+  position: relative;
+}
+#shaded_text_2::after {
+  content: "";
+  height: 85%;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  background-color: #A8B4FF;
+  z-index: -1;
+
+}
+.img-container {
+  position: relative;
+  width: fit-content;
+}
+#pattern-right {
+  position: absolute;
+  bottom: -40px;
+  right: 0;
+}
+#pattern-left {
+  position: absolute;
+  bottom: -4px;
+  left: -10px;
+}
+#footer {
+  color: rgba(0, 0, 0, 0.50);
+  font-family: Muli;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 180%;
+  margin: 150px 0 24px 0;
+}
+.content {
+  margin: -15px 24px 24px 24px;
+}
+#tr-one {
+  position: absolute;
+  bottom: 18px;
+  transform: rotate(90deg);
+  color: #000;
+  font-family: "Mulish" sans-serif;
+  width: 2px;
+  height: 105px;
+  font-weight: 700;
+}
+.content_2 {
+  margin: -110px 0 128px 0;
 }
